--- a/src/main/resources/liquibase/1.0/changelog-1.0.0.yml
+++ b/src/main/resources/liquibase/1.0/changelog-1.0.0.yml
@@ -19,6 +19,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: age
+                  type: int
+                  constraints:
+                    nullable: false
+              - column:
                   name: balance
                   type: numeric(16,2)
                   constraints:
